# dp-ilqr

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cluster/: sim.sbatch
dec-ilqr/: analytical_models.py  control.py  cost.py  dynamics.py  game.py  lq_game.py  models.py  util.py
decentralized/: __init__.py  analytical_models.py  bbdynamics.cpp  bbdynamicswrap.pyx  control.py  control2.py  cost.py  cost2.py  decentralized.py  dynamics.py  dynamics2.py  game.py  graphics.py  models.py  problem.py  testing.ipynb  util.py
dpilqr/: __init__.py  bbdynamics.cpp  bbdynamicswrap.pyx  control.py  decentralized.py  distributed.py  dynamics.py  graphics.py  problem.py  timer_sleep.py
icon/: control.py  cost.py  dynamics.py  models.py
notebooks/: dec-ilqr.ipynb  derivations.ipynb  ilqr.ipynb  main.ipynb  main.py  main2.ipynb  main2.py  main_Randy.ipynb  sub-problems.ipynb
notebooks/.ipynb_checkpoints/: ilqr-checkpoint.ipynb
paper/: decentralized-potential-ilqr.md
run/: analysis.py  animations.py  derivations.ipynb  examples.py  experiment_parameters.txt  main.ipynb  post.ipynb  quad_mpc.ipynb  scenarios.py
run/do_mpc/: 4_drone_sim_data.npy  baseline_model.py  baseline_model_mpc.py  baseline_model_simulator.py  drone_sim_data.npy  sim_drone_main.py  test.ipynb  test_centralized.ipynb  test_decentralized.ipynb  util.py  vis_3d.py
scripts/: examples.py  experiment.py  scenarios.py
src/: cost.py  dynamics.py
src/.ipynb_checkpoints/: cost-checkpoint.py
tests/: test_cost.py  test_dynamics.py
